# paralign

./: .gitignore  Makefile.am  README.md  configure.ac  pa-corpus.py  pa-env.sh
java/: build.xml
java/ivy/: ivy.xml
java/src/main/paralign/: Partitioner1.java  Partitioner2.java
scripts/: pa-corpus.py  pa-env.sh  pa-hadoop-test.bash.in  pa-hadoop.bash  pa-hadoop.bash.in  partitioner.py  test-run.bash  test-run.bash.in
src/: combiner.cc  diagonal.cc  dump_ttable.cc  estimate.cc  init_ttable.cc  io.h  log.h  mapper.cc  options.cc  options.h  reducer.cc  reducer.h  ttable.h  types.h  viterbi.cc
src/test/: io_test.cc  options_test.cc  ttable_test.cc
