AC_PREREQ([2.65])
AC_INIT([paralign], [0.1])
AM_INIT_AUTOMAKE([foreign -Wall subdir-objects])

AC_CONFIG_SRCDIR([src/io.h])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.
BOOST_REQUIRE([1.44])
BOOST_TEST

# Checks for header files.
AC_CHECK_HEADERS([stdint.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
